--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,15 @@
     <groupId>org.example</groupId>
     <artifactId>GitBranchDemo</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+<dependencies>
+    <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+    <dependency>
+        <groupId>org.testng</groupId>
+        <artifactId>testng</artifactId>
+        <version>7.7.1</version>
+        <scope>test</scope>
+    </dependency>
+</dependencies>
     <properties>
         <maven.compiler.source>19</maven.compiler.source>
         <maven.compiler.target>19</maven.compiler.target>
